--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^15.12.4",
     "typescript": "^4.3.4"
   }
 }
