--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "main": "index.js",
   "type": "module",
   "license": "MIT",
+  "dependencies": {
+    "nookies": "^2.5.2"
+  },
+  "peerDependencies": {
+    "next": ">=10.1.0"
+  },
   "devDependencies": {
     "@types/node": "^15.12.4",
+    "next": "^11.0.1",
     "typescript": "^4.3.4"
   }
 }
