--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "next": ">=10.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
+    "babel-jest": "^27.0.5",
+    "jest": "^27.0.5",
     "next": "^11.0.1",
     "typescript": "^4.3.4"
   }
