--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "type": "module",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint ./src/*.ts",
+    "test": "jest"
+  },
   "dependencies": {
     "nookies": "^2.5.2"
   },
@@ -16,9 +20,14 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "babel-jest": "^27.0.5",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
     "jest": "^27.0.5",
     "next": "^11.0.1",
+    "prettier": "^2.3.1",
     "typescript": "^4.3.4"
   }
 }
