--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest": "^27.0.5",
     "next": "^11.0.1",
     "prettier": "^2.3.1",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   }
 }
