--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "lint": "eslint ./src/*.ts",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "build": "tsc"
   },
   "dependencies": {
