--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
@@ -55,6 +57,7 @@
     "babel-jest": "^27.0.5",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
+    "husky": "^6.0.0",
     "jest": "^27.0.5",
     "next": "^11.0.1",
     "prettier": "^2.3.1",
