--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
+    "node-fetch": "^2.6.1",
     "nookies": "^2.5.2"
   },
   "peerDependencies": {
@@ -52,6 +53,7 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
+    "@types/node-fetch": "^2.5.10",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "babel-jest": "^27.0.5",
