--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/cookie": "^0.4.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.4",
     "@types/node-fetch": "^2.5.10",
