--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint": "eslint ./src/**/*.ts ./src/*.ts",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "build": "tsc",
+    "build": "tsc && ts-add-module-exports",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
@@ -64,6 +64,7 @@
     "prettier": "^2.3.1",
     "semantic-release": "^17.4.4",
     "semantic-release-cli": "^5.4.3",
+    "ts-add-module-exports": "^1.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   }
