--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   "homepage": "https://github.com/aiji42/next-with-split#readme",
   "scripts": {
     "lint": "eslint ./src/**/*.ts ./src/*.ts",
+    "format": "prettier './src/**/*.ts' './src/*.ts' --write",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "build": "tsc && ts-add-module-exports",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "nookies": "^2.5.2"
@@ -58,8 +60,9 @@
     "babel-jest": "^27.0.5",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.1",
     "jest": "^27.0.5",
+    "lint-staged": "^11.1.2",
     "next": "^11.0.1",
     "prettier": "^2.3.1",
     "semantic-release": "^17.4.4",
@@ -67,5 +70,11 @@
     "ts-add-module-exports": "^1.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
