chore: update .eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier"
-  ]
+  ],
+  "env": {
+    "node": true
+  }
 }
