chore: update example

--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "next": "11.0.1",
-    "next-with-split": "link:../",
+    "next-with-split": "3.3.0-beta.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
