--- a/example/package.json
+++ b/example/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
-    "next-with-split": "3.3.0-beta.1",
+    "next": "11.1.2",
+    "next-with-split": "3.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.11",
-    "eslint": "7.29.0",
-    "eslint-config-next": "11.0.1",
-    "typescript": "4.3.4"
+    "@types/react": "17.0.30",
+    "eslint": "8.0.1",
+    "eslint-config-next": "11.1.2",
+    "typescript": "4.4.4"
   }
 }
