--- a/example/package.json
+++ b/example/package.json
@@ -5,18 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "next": "12.0.1",
+    "next-with-split": "link:../",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.33",
-    "eslint": "8.1.0",
-    "eslint-config-next": "12.0.1",
     "typescript": "4.4.4"
   }
 }
