--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "./esm/main.d.ts",
   "type": "module",
   "files": [
-    "build"
+    "build",
+    "esm"
   ],
   "publishConfig": {
     "access": "public"
