--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "next": "12.0.1",
-    "next-with-split": "^4.0.0-beta.2",
+    "next-with-split": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
