--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "babel-jest": "^27.4.2",
-    "eslint": "^8.4.1",
+    "eslint": "<8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "jest": "^27.4.3",
