--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "./esm/main.js",
   "types": "./esm/main.d.ts",
   "bin": {
-    "with-next-split": "./build/script.js"
+    "next-with-split": "./build/script.js"
   },
   "files": [
     "build",
@@ -45,6 +45,9 @@
     "semantic-release": "semantic-release",
     "prepare": "husky install"
   },
+  "dependencies": {
+    "yargs": "^17.3.1"
+  },
   "peerDependencies": {
     "next": ">=12.0.0"
   },
@@ -57,6 +60,7 @@
     "@types/cookie": "^0.4.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
+    "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "babel-jest": "^27.4.6",
