--- a/package.json
+++ b/package.json
@@ -49,31 +49,30 @@
     "next": ">=12.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
+    "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/app-root-path": "^1.2.4",
     "@types/cookie": "^0.4.1",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.12",
-    "@types/yargs": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "babel-jest": "^27.4.6",
-    "eslint": "<8.0.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.7",
-    "lint-staged": "^12.3.1",
-    "next": "^12.0.8",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.4",
+    "next": "^12.1.0",
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
     "semantic-release-cli": "^5.4.4",
     "ts-add-module-exports": "^1.0.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.6.0",
+    "typescript": "^4.6.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
