--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "@types/react": "17.0.39",
     "typescript": "4.6.2"
   }
