--- a/example/package.json
+++ b/example/package.json
@@ -9,14 +9,14 @@
   },
   "dependencies": {
     "@geist-ui/react": "^2.2.5",
-    "next": "12.1.0",
-    "next-with-split": "^4.3.1-beta.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "12.1.6",
+    "next-with-split": "^4.3.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@types/react": "17.0.39",
-    "typescript": "4.6.2"
+    "@types/node": "^17.0.40",
+    "@types/react": "18.0.12",
+    "typescript": "4.7.3"
   }
 }
