--- a/package.json
+++ b/package.json
@@ -34,10 +34,9 @@
   },
   "homepage": "https://github.com/aiji42/next-with-split#readme",
   "scripts": {
-    "lint": "eslint ./src/**/*.ts ./src/*.ts",
     "format": "prettier './src/**/*.ts' './src/*.ts' --write",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "build": "tsc && ts-add-module-exports && tsc -p tsconfig.esm.json",
     "semantic-release": "semantic-release",
     "prepare": "husky install"
@@ -49,22 +48,13 @@
     "next": ">=12.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@types/app-root-path": "^1.2.4",
     "@types/cookie": "^0.5.1",
-    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "babel-jest": "^28.1.2",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
+    "c8": "^7.11.3",
     "husky": "^8.0.1",
-    "jest": "^28.1.2",
     "lint-staged": "^13.0.3",
     "next": "^12.1.6",
     "prettier": "^2.7.1",
@@ -72,11 +62,11 @@
     "semantic-release-cli": "^5.4.4",
     "ts-add-module-exports": "^1.0.0",
     "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vitest": "^0.17.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
       "prettier --write"
     ]
   }
