feat: abolish the function to manage middleware
BREAKING CHANGE: `manage: true` is not available any more.
since Next.js v12.2, only one middleware can be installed in a project.

--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
     "semantic-release": "semantic-release",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "app-root-path": "^3.0.0"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "next": ">=12.0.0"
   },
