--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "test:coverage": "vitest run --coverage",
     "build": "tsc && ts-add-module-exports && tsc -p tsconfig.esm.json",
     "semantic-release": "semantic-release",
+    "prepack": "yarn build",
     "prepare": "husky install"
   },
   "dependencies": {},
@@ -48,7 +49,6 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@types/app-root-path": "^1.2.4",
     "@types/cookie": "^0.5.1",
     "@types/node": "^18.0.3",
     "c8": "^7.11.3",
@@ -57,7 +57,6 @@
     "next": "^12.1.6",
     "prettier": "^2.7.1",
     "semantic-release": "^19.0.3",
-    "semantic-release-cli": "^5.4.4",
     "ts-add-module-exports": "^1.0.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
