--- a/package.json
+++ b/package.json
@@ -3,43 +3,10 @@
   "version": "0.0.0-development",
   "description": "This is a plugin for split testing (AB testing) in Next.js.",
   "main": "./build/index.cjs",
-  "module": "./build/main.mjs",
-  "types": "./esm/main.d.ts",
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./build/index.d.ts",
-        "default": "./build/index.mjs"
-      },
-      "require": {
-        "types": "./build/index.d.ts",
-        "default": "./build/index.cjs"
-      }
-    },
-    "./build/*": {
-      "import": {
-        "types": "./build/*.d.ts",
-        "default": "./build/*.mjs"
-      },
-      "require": {
-        "types": "./build/*.d.ts",
-        "default": "./build/*.cjs"
-      }
-    },
-    "./*": {
-      "import": {
-        "types": "./build/*.d.ts",
-        "default": "./build/*.mjs"
-      },
-      "require": {
-        "types": "./build/*.d.ts",
-        "default": "./build/*.cjs"
-      }
-    }
-  },
+  "module": "./build/index.mjs",
+  "types": "./build/index.d.ts",
   "files": [
-    "build",
-    "esm"
+    "build"
   ],
   "publishConfig": {
     "access": "public"
